# KzVisaBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Technical_Specification.md  docker-compose.yml  main.py  pyproject.toml  test_worker_notifications.py
.github/instructions/: main.instructions.md
deploy/systemd/: kzvisabot.service
kzvisabot/: __init__.py  domain.py  selenium_provider.py  state_file.py  worker.py
visabot/: config.py  domain.py  selenium_provider.py  state_file.py  telegram_notifier.py  worker.py
visabot/tests/: test_busy_detection_from_test_pages.py  test_config_telegram_chat_ids.py  test_main_lifecycle_notifications.py  test_telegram_delivery_smoke.py  test_worker_notifications.py
