[project]
name = "kzvisabot"
version = "0.1.0"
description = "Visa slot checker for ais.usvisa-info.com with Telegram notifications"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.25.0",
    "webdriver-manager>=4.0.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not telegram'"
markers = [
    "telegram: tests that call real Telegram API (smoke/integration)",
]
